Fixed header decoration z-index issue

--- a/app/components/header/_header.scss
+++ b/app/components/header/_header.scss
@@ -2,6 +2,7 @@
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 100;
     background: $app-blue;
     width: 100%;
     height: $header-height-px;
